# womb-wise-public

./: LICENSE  README.md
fetus-event-detection-classification/: .gitignore  pyproject.toml
fetus-event-detection-classification/src/: load_dataset.py  main.py  model.py  training.py  validation.py
mean_mouth_distance/: main.ipynb  pyproject.toml
