[tool.poetry]
name = "fetus-event-detection-classification"
version = "0.1.0"
description = ""
authors = ["kanopo <dmitri.ollari@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
torch = "^2.3.1"
seaborn = "^0.13.2"
imblearn = "^0.0"
imbalanced-learn = "^0.12.3"
torchmetrics = "^1.4.0.post0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
